implemented update posibility in syncExternalCharacters method